[project]
name = "rye-tui"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Zaloog", email = "gramslars@gmail.com" }
]
dependencies = [
    "textual>=0.56.4",
    "textual-dev>=1.5.1",
    "rich-pixels>=3.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.scripts]
trye = "rye_tui.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_tui"]
