[project]
name = "rye-tui"
version = "0.1.0"
description = "Rye meets Textual. Manage your python projects with a Tui"
authors = [
    { name = "Zaloog", email = "gramslars@gmail.com" }
]
dependencies = [
    "textual>=0.56.4",
    "rich-pixels>=3.0.1",
    "platformdirs>=4.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

keywords = ["rye", "python", "textual", "tui"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/Zaloog/rye-tui"
Changelog = "https://github.com/Zaloog/rye-tui/blob/main/CHANGELOG.md"

[project.scripts]
trye = "rye_tui.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.0",
    "textual-dev>=1.5.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_tui"]
